--- a/document/myCitation.bib
+++ b/document/myCitation.bib
@@ -21,6 +21,14 @@ doi = {10.3390/e15020490}
      month = {11},
 }
 
+@misc{SEEDTutorial2015,
+    author    = "{Lawrence Berkeley National Laboratory}",
+    title     = "SEED 1.1 Tutorial",
+    howpublished = "web",
+    year     = 2015,
+    month    = nov, 
+    note = {\url{https://windows.lbl.gov/projects/SEED/IntroTutorial/SEED%201.2%20Overview.htm}}
+}
 @misc{REST2015,
     author    = "{Tutorials Point}",
     title     = "RESTful Web Services - Introduction",
