documented the fuzzywuzzy package, need additional info for matching field and test

--- a/document/myCitation.bib
+++ b/document/myCitation.bib
@@ -21,6 +21,42 @@ doi = {10.3390/e15020490}
      month = {11},
 }
 
+@misc{approxStringMatchWiki,
+    author    = "{Wikipedia}",
+    title     = "Approximate string matching",
+    howpublished = "web",
+    year     = 2015,
+    month    = nov, 
+    note = {\url{https://en.wikipedia.org/wiki/Approximate_string_matching}}
+}
+
+@misc{SEEDWebpage2015,
+    author    = "{Lawrence Berkeley National Laboratory}",
+    title     = "SEED Platform",
+    howpublished = "web",
+    year     = 2015,
+    month    = nov, 
+    note = {\url{https://seed.lbl.gov/app/#/data/mapping/1815}}
+}
+
+@misc{fuzzyWuzzyGit2015,
+    author    = "{JeffPaine et al.}",
+    title     = "seatgeek/fuzzywuzzy",
+    howpublished = "web",
+    year     = 2015,
+    month    = nov, 
+    note = {\url{https://github.com/seatgeek/fuzzywuzzy}}
+}
+
+@misc{fuzzyWuzzy2015,
+    author    = "{Python Software Foundation}",
+    title     = "fuzzywuzzy 0.8.0",
+    howpublished = "web",
+    year     = 2015,
+    month    = nov, 
+    note = {\url{https://pypi.python.org/pypi/fuzzywuzzy}}
+}
+
 @misc{SEEDTutorial2015,
     author    = "{Lawrence Berkeley National Laboratory}",
     title     = "SEED 1.1 Tutorial",
@@ -29,6 +65,7 @@ doi = {10.3390/e15020490}
     month    = nov, 
     note = {\url{https://windows.lbl.gov/projects/SEED/IntroTutorial/SEED%201.2%20Overview.htm}}
 }
+
 @misc{REST2015,
     author    = "{Tutorials Point}",
     title     = "RESTful Web Services - Introduction",
