--- a/document/myCitation.bib
+++ b/document/myCitation.bib
@@ -10,6 +10,19 @@ url = {http://www.mdpi.com/1099-4300/15/2/490},
 issn = {1099-4300},
 doi = {10.3390/e15020490}
 }
+@article{citeulike1466288,
+    author = {Goldberg, D. W. and Wilson, J. P. and Knoblock},
+    journal = {Journal of the Urban and Regional Information Systems Association},
+    keywords = {data, geocoding, georeferencing, information-retrieval, tool},
+    number = {1},
+    pages = {33-46},
+    posted-at = {2007-07-19 02:56:57},
+    priority = {5},
+    title = {{From Text to Geographic Coordinates: The Current State of Geocoding.}},
+    url = {https://mail.google.com/mail/?auth=DQAAAH4AAABBWSdVHZOOR-n0NR-7WgTWkokcGC2EBa-VRswWNp2oFBXGGWE0kMOk4aEZFE\_IzNnmfEVR1TA6ken9Xg6J3XGr5WXTZH18jhBO1KNMfjS45orxtPvwcaou7uRpdgX0Th35vmVDX8jQv-KEYptfdWfVNfvNmpLS5Us2CAFdfEd4HQ\&\#38;shva=1},
+    volume = {19},
+    year = {2007}
+}
 
 @techreport{SEEDProjectPlan,
      title = {{Software Architecture and Development Plan, Building
