--- a/document/PMwithBuildingID.tex
+++ b/document/PMwithBuildingID.tex
@@ -127,6 +127,13 @@ The excel template consists of the following fields:
   Attribution" and "Interval Period", if necessary.'')
 \end{description}
 
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width = 1.0\textwidth]{template10field.png}
+  \caption{Template excel file}
+  \label{fig:template10field}
+\end{figure}
+
 \subsection{Pseudo Code}
 \makeatletter
 \def\verbatim@font{\linespread{1}\small\ttfamily}
@@ -221,6 +228,12 @@ For each table in the folder:
 \end{tikzpicture}
 
 \subsection{Retrieving Building Snapshot ID}
+Wrote a draft script, need to check the required field name and table
+name and test.
+\section{PM Excel file to template file converter}
+created the modified template, 
+created a new building in PM with meter data, 
+write the converter tomorrow
 \newpage
 \bibliographystyle{plain}
 \bibliography{myCitation}
