separated input 31M file to 3 csv sheets and wrote the script to process the static information

--- a/Code/converter/TODO.txt
+++ b/Code/converter/TODO.txt
@@ -34,3 +34,7 @@ check the following:
 jangle interface for query
     MVC
     how the model is defined
+
+dec. 7
+run and test the code
+write a converter for
