--- a/document/PMwithBuildingID.tex
+++ b/document/PMwithBuildingID.tex
@@ -228,12 +228,10 @@ For each table in the folder:
 \end{tikzpicture}
 
 \subsection{Retrieving Building Snapshot ID}
-Wrote a draft script, need to check the required field name and table
-name and test.
+Wrote a query.py file to query SEED test database and retrieve 
 \section{PM Excel file to template file converter}
-created the modified template, 
-created a new building in PM with meter data, 
-write the converter tomorrow
+Wrote a PM2template.py file to convert EnergyStar PM file to the excel
+template
 \newpage
 \bibliographystyle{plain}
 \bibliography{myCitation}
